# ADOL-C

./: CMakeLists.txt  README.md
.github/workflows/: coverage.yml  format  format.yml  sanitizer_tests.yml  sanitizers.yml  tests.yml
ADOL-C/boost-test/: CMakeLists.txt
ADOL-C/c_interface/: ADOLC_TB_interface.cpp  ADOLC_TB_interface.h  ADOLC_TL_interface.cpp  ADOLC_TL_interface.h  CMakeLists.txt
ADOL-C/include/adolc/: adouble.h
ADOL-C/include/adolc/internal/: CMakeLists.txt
ADOL-C/include/adolc/valuetape/: persistanttapeinfos.h
ADOL-C/src/: adouble_tl.cpp  checkpointing.cpp  tape_handling.cpp  tape_interface.cpp  taping.cpp
ADOL-C/src/valuetape/: tapeinfos.cpp
